@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdbcLocationRequestDao.java - 19/05/2022 2:08:33 pm
- * 
+ *
  * Copyright 2022 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -42,7 +42,7 @@ import net.solarnetwork.domain.SortDescriptor;
 
 /**
  * JDBC implementation of {@link LocationRequestDao}.
- * 
+ *
  * @author matt
  * @version 1.1
  * @since 1.3
@@ -53,7 +53,7 @@ public class JdbcLocationRequestDao implements LocationRequestDao {
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param jdbcOps
 	 *        the JDBC operations
 	 * @throws IllegalArgumentException
@@ -79,13 +79,13 @@ public class JdbcLocationRequestDao implements LocationRequestDao {
 
 	@Override
 	public Long save(LocationRequest entity) {
-		Long result = null;
+		Long result;
 		if ( entity.getId() == null ) {
 			final InsertLocationRequest sql = new InsertLocationRequest(entity);
 			KeyHolder keyHolder = new GeneratedKeyHolder();
 			jdbcOps.update(sql, keyHolder);
 			Map<String, Object> keys = keyHolder.getKeys();
-			Object id = keys.get("id");
+			Object id = keys != null ? keys.get("id") : null;
 			result = (id instanceof Long ? (Long) id : null);
 		} else {
 			final UpdateLocationRequest sql = new UpdateLocationRequest(entity);
@@ -99,7 +99,7 @@ public class JdbcLocationRequestDao implements LocationRequestDao {
 	public LocationRequest get(Long id) {
 		SelectLocationRequest sql = new SelectLocationRequest(id);
 		List<LocationRequest> list = jdbcOps.query(sql, LocationRequestRowMapper.INSTANCE);
-		return (list != null && !list.isEmpty() ? list.get(0) : null);
+		return (!list.isEmpty() ? list.getFirst() : null);
 	}
 
 	@Override
