@@ -211,8 +211,8 @@ public class UserDatumInputController {
 		return success();
 	}
 
-	@RequestMapping(value = "/transforms/{transformId}/preview", method = RequestMethod.POST, consumes = {
-			MediaType.APPLICATION_JSON_VALUE, MediaType.TEXT_XML_VALUE })
+	@RequestMapping(value = "/transforms/{transformId}/preview", method = RequestMethod.POST,
+			consumes = { MediaType.APPLICATION_JSON_VALUE, MediaType.TEXT_XML_VALUE })
 	public Result<TransformOutput> previewTransform(@PathVariable("transformId") Long transformId,
 			@RequestHeader(value = "Content-Type", required = true) String contentType,
 			@RequestHeader(value = "Content-Encoding", required = false) String encoding, InputStream in)
@@ -220,8 +220,9 @@ public class UserDatumInputController {
 		return previewEndpointTransform(transformId, null, contentType, encoding, in);
 	}
 
-	@RequestMapping(value = "/transforms/{transformId}/preview/{endpointId}", method = RequestMethod.POST, consumes = {
-			MediaType.APPLICATION_JSON_VALUE, MediaType.TEXT_XML_VALUE })
+	@RequestMapping(value = "/transforms/{transformId}/preview/{endpointId}",
+			method = RequestMethod.POST,
+			consumes = { MediaType.APPLICATION_JSON_VALUE, MediaType.TEXT_XML_VALUE })
 	public Result<TransformOutput> previewEndpointTransform(
 			@PathVariable("transformId") Long transformId, @PathVariable("endpointId") UUID endpointId,
 			@RequestHeader(value = "Content-Type", required = true) String contentType,
@@ -253,13 +254,13 @@ public class UserDatumInputController {
 				try {
 					URI uri = new URI("http://localhost/?" + query);
 					var qMap = UriComponentsBuilder.fromUri(uri).build(true).getQueryParams();
-					if ( qMap != null ) {
+					if ( !qMap.isEmpty() ) {
 						Map<String, String> decoded = new HashMap<>(qMap.size());
 						for ( Entry<String, List<String>> entry : qMap.entrySet() ) {
 							List<String> vals = entry.getValue();
 							if ( vals != null && !vals.isEmpty() ) {
 								decoded.put(entry.getKey(),
-										URLDecoder.decode(vals.get(0), StandardCharsets.UTF_8));
+										URLDecoder.decode(vals.getFirst(), StandardCharsets.UTF_8));
 							}
 						}
 						return decoded;
@@ -273,7 +274,8 @@ public class UserDatumInputController {
 
 	}
 
-	@RequestMapping(value = "/transforms/{transformId}/preview/{endpointId}/params", method = RequestMethod.POST, consumes = MediaType.APPLICATION_JSON_VALUE)
+	@RequestMapping(value = "/transforms/{transformId}/preview/{endpointId}/params",
+			method = RequestMethod.POST, consumes = MediaType.APPLICATION_JSON_VALUE)
 	public Result<TransformOutput> previewEndpointTransform(
 			@PathVariable("transformId") Long transformId, @PathVariable("endpointId") UUID endpointId,
 			@RequestBody PreviewTransformInput previewInput) throws IOException {
@@ -287,7 +289,7 @@ public class UserDatumInputController {
 
 		Map<String, Object> parameters = null;
 		Map<String, String> queryParameters = previewInput.queryParameters();
-		if ( queryParameters != null ) {
+		if ( !queryParameters.isEmpty() ) {
 			parameters = new HashMap<>(8);
 			parameters.putAll(queryParameters);
 		}
@@ -380,7 +382,8 @@ public class UserDatumInputController {
 		return success(userDatumInputBiz.configurationForId(id, EndpointAuthConfiguration.class));
 	}
 
-	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}/enabled/{enabled}", method = RequestMethod.POST)
+	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}/enabled/{enabled}",
+			method = RequestMethod.POST)
 	public Result<CredentialConfiguration> enableEndpointAuthConfiguration(
 			@PathVariable("endpointId") UUID endpointId, @PathVariable("credentialId") Long credentialId,
 			@PathVariable("enabled") boolean enabled) {
@@ -390,7 +393,8 @@ public class UserDatumInputController {
 		return success();
 	}
 
-	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}", method = RequestMethod.DELETE)
+	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}",
+			method = RequestMethod.DELETE)
 	public Result<Void> deleteEndpointAuthConfiguration(@PathVariable("endpointId") UUID endpointId,
 			@PathVariable("credentialId") Long credentialId) {
 		UserUuidLongCompositePK id = new UserUuidLongCompositePK(getCurrentActorUserId(), endpointId,
