@@ -330,20 +330,21 @@ public class UserInstructionInputController {
 	public static record PreviewTransformInput(@JsonProperty("contentType") String contentType,
 			@JsonProperty("data") String data, @JsonProperty("query") String query,
 			@JsonProperty(value = "parameters", required = false) Map<String, Object> parameters,
-			@JsonProperty(value = "instructionResults", required = false) List<TransformInstructionResults> instructionResults) {
+			@JsonProperty(value = "instructionResults",
+					required = false) List<TransformInstructionResults> instructionResults) {
 
 		private Map<String, String> queryParameters() {
 			if ( query != null && !query.isBlank() ) {
 				try {
 					URI uri = new URI("http://localhost/?" + query);
 					var qMap = UriComponentsBuilder.fromUri(uri).build(true).getQueryParams();
-					if ( qMap != null ) {
+					if ( !qMap.isEmpty() ) {
 						Map<String, String> decoded = new HashMap<>(qMap.size());
 						for ( Entry<String, List<String>> entry : qMap.entrySet() ) {
 							List<String> vals = entry.getValue();
 							if ( vals != null && !vals.isEmpty() ) {
 								decoded.put(entry.getKey(),
-										URLDecoder.decode(vals.get(0), StandardCharsets.UTF_8));
+										URLDecoder.decode(vals.getFirst(), StandardCharsets.UTF_8));
 							}
 						}
 						return decoded;
@@ -357,7 +358,8 @@ public class UserInstructionInputController {
 
 	}
 
-	@RequestMapping(value = "/endpoints/{endpointId}/preview", method = RequestMethod.POST, consumes = MediaType.APPLICATION_JSON_VALUE)
+	@RequestMapping(value = "/endpoints/{endpointId}/preview", method = RequestMethod.POST,
+			consumes = MediaType.APPLICATION_JSON_VALUE)
 	public Result<TransformOutput> previewEndpointTransform(@PathVariable("endpointId") UUID endpointId,
 			@RequestBody PreviewTransformInput previewInput) throws IOException {
 		UserUuidPK id = new UserUuidPK(getCurrentActorUserId(), endpointId);
@@ -371,7 +373,7 @@ public class UserInstructionInputController {
 
 		Map<String, Object> parameters = null;
 		Map<String, String> queryParameters = previewInput.queryParameters();
-		if ( queryParameters != null ) {
+		if ( !queryParameters.isEmpty() ) {
 			parameters = new HashMap<>(8);
 			parameters.putAll(queryParameters);
 		}
@@ -417,7 +419,8 @@ public class UserInstructionInputController {
 		return success(userInstructionInputBiz.configurationForId(id, EndpointAuthConfiguration.class));
 	}
 
-	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}/enabled/{enabled}", method = RequestMethod.POST)
+	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}/enabled/{enabled}",
+			method = RequestMethod.POST)
 	public Result<CredentialConfiguration> enableEndpointAuthConfiguration(
 			@PathVariable("endpointId") UUID endpointId, @PathVariable("credentialId") Long credentialId,
 			@PathVariable("enabled") boolean enabled) {
@@ -427,7 +430,8 @@ public class UserInstructionInputController {
 		return success();
 	}
 
-	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}", method = RequestMethod.DELETE)
+	@RequestMapping(value = "/endpoints/{endpointId}/auths/{credentialId}",
+			method = RequestMethod.DELETE)
 	public Result<Void> deleteEndpointAuthConfiguration(@PathVariable("endpointId") UUID endpointId,
 			@PathVariable("credentialId") Long credentialId) {
 		UserUuidLongCompositePK id = new UserUuidLongCompositePK(getCurrentActorUserId(), endpointId,
