@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdbcUserFluxAggregatePublishConfigurationDao.java - 24/06/2024 9:10:58 am
- * 
+ *
  * Copyright 2024 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -45,7 +45,7 @@ import net.solarnetwork.util.ObjectUtils;
 
 /**
  * JDBC implementation of {@link UserFluxAggregatePublishConfigurationDao}.
- * 
+ *
  * @author matt
  * @version 1.1
  */
@@ -104,7 +104,7 @@ public class JdbcUserFluxAggregatePublishConfigurationDao
 		var sql = new SelectUserFluxAggregatePublishConfiguration(id);
 		List<UserFluxAggregatePublishConfiguration> results = jdbcOps.query(sql,
 				UserFluxAggregatePublishConfigurationRowMapper.INSTANCE);
-		return (!results.isEmpty() ? results.get(0) : null);
+		return (!results.isEmpty() ? results.getFirst() : null);
 	}
 
 	@Override
@@ -129,7 +129,7 @@ public class JdbcUserFluxAggregatePublishConfigurationDao
 				sourceId);
 		final List<FluxPublishSettings> results = jdbcOps.query(sql,
 				FluxPublishSettingsInfoRowMapper.INSTANCE);
-		return (!results.isEmpty() ? results.get(0) : FluxPublishSettingsInfo.NOT_PUBLISHED);
+		return (!results.isEmpty() ? results.getFirst() : FluxPublishSettingsInfo.NOT_PUBLISHED);
 	}
 
 	@Override
